apps/argocd/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway-argo
  namespace: argocd
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https-argocd
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: argocd-tls-credential
    hosts:
    - argocd.127.0.0.1.nip.io
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-gateway-argo
  namespace: argocd
spec:
  hosts:
  - argocd.127.0.0.1.nip.io
  gateways:
  - istio-gateway-argo
  http:
  - name: "app"
    route:
    - destination:
        port:
          number: 80
        host: argocd-server.argocd.svc.cluster.local
